# humility-guardrail

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  OPA.md
examples/: langchain_quickstart.py  litellm_config.yaml  openai_quickstart.py  system_prompt_only.py
policies/humility/: base.rego
src/humility/: __init__.py  prompt.py  responses.py  rules.py
src/humility/adapters/: __init__.py  langchain_handler.py  litellm.py  openai_wrapper.py
tests/: test_prompt.py  test_responses.py  test_rules.py
