[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humility-guardrail"
version = "0.1.0"
description = "Drop-in alignment guardrail for any LLM. Implements the SAIVAS framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Dan Medina", email = "dan@uniformedi.com" }]
requires-python = ">=3.10"
keywords = ["llm", "alignment", "guardrail", "safety", "saivas", "humility", "ai-governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
litellm = ["litellm>=1.50"]
openai = ["openai>=1.40"]
langchain = ["langchain-core>=0.3"]
opa = ["requests>=2.28"]
all = ["litellm>=1.50", "openai>=1.40", "langchain-core>=0.3", "requests>=2.28"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.6", "black>=24"]

[project.urls]
Homepage = "https://uniformgnosis.com"
Repository = "https://github.com/uniformedi/humility-guardrail"
Documentation = "https://humility.uniformedi.com"

[tool.hatch.build.targets.wheel]
packages = ["src/humility"]

[tool.hatch.build.targets.wheel.shared-data]
"policies" = "humility/policies"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
